--- a/XRouteTestClient/Emissions_Form.resx
+++ b/XRouteTestClient/Emissions_Form.resx
@@ -120,7 +120,15 @@
   <metadata name="emissionsBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
-  <metadata name="emissionsBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAQAAAAAAAoAQAAFgAAACgAAAAQAAAAIAAAAAEABAAAAAAAgAAAAAAAAAAAAAAAEAAAAAAA
+        AAApIeAAAAAAAIqIhwD///8AyMfGAK+s8wCZl5YAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAIiIhEREiIiEiIiIiIiIiISJFQiIiIiIhIlBTIiIiIiEiRUQ0NCIiIRIiIiNDIiIiEiIiJDQi
+        IiISIiIjYiIiIhIiIiMiIiIiEiIkNCIiIiIiIiNDIiIiISIiJDQzJFQhIiIiIiQ1BSEiIiIiIiRUISIi
+        IiIiIiIhERESIiIREREHwQAAAAEAAAABAAAAAQAAAAEAAIAAAACAAAAAgAAAAIAAAACAAAAAAAEAAAAB
+        AAAAAQAAAAEAAAABAAD4PwAA
+</value>
+  </data>
 </root>
