--- a/XRouteTestClient/TimeEventsForm.resx
+++ b/XRouteTestClient/TimeEventsForm.resx
@@ -117,4 +117,15 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAQAAAAAAAoAQAAFgAAACgAAAAQAAAAIAAAAAEABAAAAAAAgAAAAAAAAAAAAAAAEAAAAAAA
+        AAApIeAAAAAAAIqIhwD///8AyMfGAK+s8wCZl5YAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAIiIhEREiIiEiIiIiIiIiISJFQiIiIiIhIlBTIiIiIiEiRUQ0NCIiIRIiIiNDIiIiEiIiJDQi
+        IiISIiIjYiIiIhIiIiMiIiIiEiIkNCIiIiIiIiNDIiIiISIiJDQzJFQhIiIiIiQ1BSEiIiIiIiRUISIi
+        IiIiIiIhERESIiIREREHwQAAAAEAAAABAAAAAQAAAAEAAIAAAACAAAAAgAAAAIAAAACAAAAAAAEAAAAB
+        AAAAAQAAAAEAAAABAAD4PwAA
+</value>
+  </data>
 </root>
